[package]
name = "yatima-rustyline-derive"
version = "0.1.0"
authors = ["Samuel Burnham <sam@yatima.io>"]
edition = "2018"
description = "yatima-rustyline macros"
repository = "https://github.com/yatima-inc/rustyline"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
quote = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
