[package]
name = "rustyline-web"
version = "0.1.0"
edition = "2018"

[lib]
# crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rustyline = { path = "..", default-features = false, features = [ "wasm" ] }
base64 = "0.13.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.49"
unicode-segmentation = "1.8.0"
wasm-bindgen = { version = "0.2.72", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.22"
xterm-js-rs = { git = "https://github.com/yatima-inc/xterm-js-rs", branch = "acs/flake", version = "0.1.1", features = ["xterm-addon-fit", "xterm-addon-search", "xterm-addon-web-links"] }
serde_json = { version = "1.0" }

[dependencies.web-sys]
version = "0.3.49"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Storage',
  'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.12"
